@@ -3,6 +3,7 @@ Version 2.4.0
 * Post DiFX-2.3
 * Support axis offset argument for ANTENNAs
 * Adapt to string-based networkPort in support of raw sockets
+* Detect mismatched bandwidths and issue warning
 
 Version 2.3.0
 ~~~~~~~~~~~~~
